# agency-operating-system-ai-agent

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO_PROMPTS.md  README.md  alembic.ini  pyproject.toml  what_it_can_do.md
docs/: agent_flow.md  architecture.md  sequence.md
migrations/: env.py
sample_data/: meeting_brightbrew.txt
scripts/: live_smoke.py  serve_api.py
src/: config.py  main.py  orchestrator.py  views.py
src/agencyos/: __init__.py  config.py  main.py  orchestrator.py  views.py
src/agencyos/agents/: __init__.py  base.py  clarification.py  clickup.py  executor.py  manager.py  planning.py  proposal.py  registry.py  requirement.py  risk.py  task_generation.py  transcription.py  validator.py
src/agencyos/api/: __init__.py  app.py  exporters.py
src/agencyos/cli/: __init__.py  app.py
src/agencyos/graph/: __init__.py  builder.py  routing.py  state.py
src/agencyos/llm/: __init__.py  groq.py
src/agencyos/memory/: checkpointer.py  db.py  repository.py
src/agencyos/observability/: logging.py
src/agencyos/prompts/: __init__.py
src/agencyos/prompts/system/: capabilities.j2  manager.j2  manager_intent.j2
src/agencyos/prompts/tasks/: apply_clarifications.j2  build_plan.j2  draft_clickup_tickets.j2  draft_proposal.j2  extract_requirements.j2  (+1 more)
src/agencyos/tools/: clickup_mcp.py  document_loader.py  file_io.py  transcription.py  web_search.py
src/agents/: base.py  clarification.py  clickup.py  executor.py  manager.py  planning.py  progress_report.py  proposal.py  registry.py  requirement.py  risk.py  task_generation.py  transcription.py  validator.py
src/api/: __init__.py  app.py
src/cli/: app.py
src/graph/: builder.py  routing.py  state.py
src/llm/: __init__.py  groq.py
src/memory/: __init__.py  checkpointer.py  db.py  models.py  repository.py
src/observability/: __init__.py  logging.py
src/prompts/partials/: reasoning_rubric.j2
src/prompts/tasks/: analyze_risks.j2  apply_clickup_details.j2  build_plan.j2  detect_gaps.j2  draft_proposal.j2  generate_tasks.j2  validate.j2
src/tools/: __init__.py  calculator.py  clickup_mcp.py  file_io.py  github.py  transcription.py  web_search.py
tests/: conftest.py  test_api_reconnect.py  test_clarification.py  test_cli.py  test_clickup.py  test_executor.py  test_graph_flow.py  test_intent.py  test_orchestrator.py  test_planning.py  test_progress_report.py  test_proposal.py  test_registry.py  test_requirement.py  test_risk.py  test_routing.py  test_smoke.py  test_task_generation.py  test_transcription.py  test_validator.py
