[project]
name = "agencyos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abdulrahmanmoin", email = "iam.armoin@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "groq>=0.37.1",
    "jinja2>=3.1.6",
    "langchain>=1.3.3",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.12.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sqlmodel>=0.0.38",
    "structlog>=25.5.0",
    "tavily-python>=0.7.25",
    "tenacity>=9.1.4",
    "typer>=0.26.6",
]

[project.scripts]
agencyos = "agencyos:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
]
